--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,5 @@
 ##Disable open session in view
 #spring.jpa.open-in-view=false
 
-jdbc.username = root
+#jdbc.username = root
+#logging.pattern.level=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{1.}.%M.[%line] [%X{reqId}] -
