Test Framework Setup

--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
                                         <limit>
                                             <counter>INSTRUCTION</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.0e</minimum>
+                                            <minimum>0.0</minimum>
                                         </limit>
                                     </limits>
                                     <excludes>
