--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-        format_sql: true
+        format_sql: false
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
   # Spring Security Basic Auth
