Address, Admin and Card Controller formatting

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,1 +1,1 @@
-FIND_ALL_BY_USER_USER_ID=SELECT a FROM Address a LEFT OUTER JOIN FETCH a.user WHERE a.user.userId = :userId
+ADDRESS.FIND_ALL_BY_USER_USER_ID=SELECT a FROM Address a LEFT OUTER JOIN FETCH a.user WHERE a.user.userId = :userId
