Category, Cart Controller, Service and Repo Formatting

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,1 +1,6 @@
+# Address
 ADDRESS.FIND_ALL_BY_USER_USER_ID=SELECT a FROM Address a LEFT OUTER JOIN FETCH a.user WHERE a.user.userId = :userId
+
+# Cart
+CART.FIND_ALL_BY_USER_USER_ID=SELECT c FROM Cart c LEFT OUTER JOIN FETCH c.user u JOIN FETCH c.product p JOIN FETCH p.category JOIN FETCH p.company WHERE c.user.userId = :userId
+
