--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -4,3 +4,8 @@ ADDRESS.FIND_ALL_BY_USER_USER_ID=SELECT a FROM Address a LEFT OUTER JOIN FETCH a
 # Cart
 CART.FIND_ALL_BY_USER_USER_ID=SELECT c FROM Cart c LEFT OUTER JOIN FETCH c.user u JOIN FETCH c.product p JOIN FETCH p.category JOIN FETCH p.company WHERE c.user.userId = :userId
 
+# My Order
+MY_ORDER.FIND_ALL_USER_ORDERS=SELECT m FROM Myorder m LEFT OUTER JOIN FETCH m.user JOIN FETCH m.address
+MY_ORDER.FIND_ALL_BY_USER_USER_ID=SELECT m FROM Myorder m LEFT OUTER JOIN FETCH m.user JOIN FETCH m.address WHERE m.user.userId = :userId
+MY_ORDER.COUNT_ALL_USER_ORDERS=SELECT  COUNT(m) FROM Myorder m
+MY_ORDER.COUNT_ALL_ACTIVE_USER_ORDERS=SELECT  COUNT(m) FROM Myorder m WHERE m.deliveryStatus NOT IN ('Cancelled', 'Delivered')
