Product Controller, Service and Repo Formatting

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -16,3 +16,6 @@ ORDER_DETAIL.FIND_ALL_BY_MY_ORDER_ID=SELECT o FROM OrderDetails o JOIN FETCH o.m
   LEFT OUTER JOIN FETCH m.user JOIN FETCH m.address JOIN FETCH o.product p \
   JOIN FETCH p.category ct JOIN FETCH p.company cp WHERE o.myorder.myorderId = :myOrderId
 
+# Products
+PRODUCT.FIND_ALL_PRODUCTS=SELECT p FROM Products p JOIN FETCH p.category ct JOIN FETCH p.company cp
+PRODUCT.COUNT_ALL_PRODUCTS=SELECT COUNT(p) FROM Products p
