Product Review Controller, Service and Repo Formatting

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -19,3 +19,10 @@ ORDER_DETAIL.FIND_ALL_BY_MY_ORDER_ID=SELECT o FROM OrderDetails o JOIN FETCH o.m
 # Products
 PRODUCT.FIND_ALL_PRODUCTS=SELECT p FROM Products p JOIN FETCH p.category ct JOIN FETCH p.company cp
 PRODUCT.COUNT_ALL_PRODUCTS=SELECT COUNT(p) FROM Products p
+
+# Product Reviews
+REVIEW.FIND_ALL_BY_PRODUCT_ID=SELECT r FROM ProductReview r \
+  LEFT OUTER JOIN FETCH r.user \
+  JOIN FETCH r.product p JOIN FETCH p.category ct JOIN FETCH p.company cp  \
+  WHERE r.product.prodId = :prodId
+REVIEW.FIND_AVERAGE_OF_PRODUCT_REVIEWS=SELECT AVG(p.rating) FROM ProductReview p WHERE p.product.prodId = :prodId
