User Controller, Service and Repo Formatting

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -26,3 +26,13 @@ REVIEW.FIND_ALL_BY_PRODUCT_ID=SELECT r FROM ProductReview r \
   JOIN FETCH r.product p JOIN FETCH p.category ct JOIN FETCH p.company cp  \
   WHERE r.product.prodId = :prodId
 REVIEW.FIND_AVERAGE_OF_PRODUCT_REVIEWS=SELECT AVG(p.rating) FROM ProductReview p WHERE p.product.prodId = :prodId
+
+# User
+USER.GET_ALL_COUNT=SELECT \
+  (SELECT COUNT(*) FROM user) as userCount, \
+  (SELECT COUNT(*) FROM product) as productCount, \
+  (SELECT COUNT(*) FROM myorder) as MyOrderCount, \
+  (SELECT COUNT(*) FROM myorder WHERE delivery_status NOT IN ('Cancelled', 'Delivered')) as ActiveOrderCount, \
+  (SELECT COUNT(*) FROM company) as companyCount, \
+  (SELECT COUNT(*) FROM category) as categoryCount \
+  FROM DUAL;
