--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <!--            <version>3.2.1</version>-->
+                        <version>2.3.12.RELEASE</version>
             <scope>test</scope>
         </dependency>
         <dependency>
