--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -34,6 +34,14 @@ spring:
     ansi:
       enabled: detect
 
+# Redis Caching Properties
+  cache:
+    type: redis
+    host: localhost
+    port: 6379
+    redis:
+      time-to-live: 60000
+      cache-null-values: true
 #logging.level.org.springframework.orm.hibernate5=DEBUG
 logging:
   file:
@@ -48,6 +56,7 @@ logging:
 jdbc:
   username: root
 
+# JWT Properties
 application:
   security:
     jwt:
@@ -56,6 +65,7 @@ application:
       refresh-token:
         expiration: 604800000 # 7 days
 
+# Swagger Properties
 springdoc:
   swagger-ui:
     path: /swagger-ui/index.html
