--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
-#Tomcat server port number = 8080, context-path = /
+#Tomcat server port number = 8080, context-path = /api/v1
 server:
   port: 8080
   servlet:
